# dot

./: .gitignore  .gitmodules  README.md  Xresources  Xresources.aero15  Xresources.p1gen3  asoundrc  aspell.conf  backup.sh  bash_aliases  bash_aliases~  bash_profile  bashrc  bootstrap.sh  cabal_config  direnvrc  emacs  ghc-shell.nix  ghci  git-revision_nixpkgs  i3status.conf  keynavrc  sandboxd  sandboxrc  ssh_config  tmux.conf  update_nix-channel-git-revision.sh  update_nix-channel.sh  vimrc  vimrc.vundle  xprofile
.nixpkgs/tpacpi-bat/: default.nix
doom.d/: config.el  init.el  packages.el
dot_nix/: configuration.nix  hardware-configuration.nix  services.nix  terminal-server.nix
etc_nixos/: configuration.nix  hardware-configuration.nix  my-hardware-configuration.nix
firmware/: BCM20702A1-0a5c-21e6.hcd
hackage-mirror/: update-mirror.sh
home-manager/: config.nix  flake.nix  ghc-200.nix  ghc-2000.nix  hackage-blacklist-candidates.txt  hackage-broken.nix  hackage-mega-list.json  hackage-top-packages.json  home.nix
icc/: VVX16T028J00.icm
machines/: builder-specs.nix  common.nix  flake.nix
nixpkgs/: #hoogle-package-list.nix#  \  automake115x.patch  config.nix  flake.nix  flite-1.9.0.patch  home.nix  hoogle-local.nix  hoogle-package-list.nix  mega-ghc-package-list.nix
nixpkgs/hackage-mirror/: SimpleMirror.hs  default.nix  simple-mirror.cabal
scripts/: 24-bit-color.sh  get-port-forward.sh  pashare  reset_wlan.sh  scan-secrets.py  whitenoise.sh
utils/: ga_qr.py
xmonad/: .gitignore  \  build  ghci.sh  xmobar.hs  xmobar.sh  xmonad.hs  xmonad.hs.orig
(+122 files in other folders)
