name:          simple-mirror
version:       0.1.0.0
synopsis:      Simple mirroring utility for Hackage
homepage:      http://fpcomplete.com
license:       BSD3
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@fpcomplete.com
category:      Network
build-type:    Simple
cabal-version: >=1.10

executable simple-mirror
  default-language: Haskell2010
  main-is: SimpleMirror.hs
  build-depends:       
      base >=4.5

    , conduit
    , conduit-extra
    , http-conduit
    , resourcet

    , bytestring
    , cereal
    , cryptohash
    , directory
    , filepath
    , lifted-async
    , lifted-base
    , logging >= 2.2.0
    , mmorph
    , monad-control
    , optparse-applicative
    , stm
    , tar
    , temporary
    , text
    , transformers
    , unordered-containers
